<resources>
    <string name="app_name">Boushra</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="log_in">Login</string>
    <string name="terms_conditions">By signing-in boushra, means you agree on \n<b>all the terms and conditions</b></string>
    <string name="or"><b>Or</b></string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="new_user"><b>New user? Register Now  </b></string>
    <string name="sign_up"><u><b>SignUp</b></u></string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_passsword">Confirm Password</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="log_in_txt"><u> log in</u></string>
    <string name="need_registered_number">We need your registered Mobile Number to send password reset information</string>
    <string name="submit">Submit</string>
    <string name="otp_has_send">OTP has been sent to you on your mobile number.Please enter it below.</string>
    <string name="resend_code"><b><u>Resend code</u></b></string>
    <string name="verify">Verify</string>
    <string name="psychological_counselling">Psychological Counselling</string>
    <string name="dreams">Dreams</string>
    <string name="forecaster_list">Forecaster List</string>
    <string name="demo">Demo</string>
    <string name="price">Price</string>
    <string name="pending_queue">Pending Queue:</string>
    <string name="response_time">Response Time:</string>
    <string name="fill_the_following">Please fill the following:</string>
    <string name="email_id">Email Id</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="place_of_birth">Place Of Birth</string>
    <string name="agreed_to_terms">I agree to the term and conditions of the app.</string>
    <string name="save">Save</string>
    <string name="self_devolpment">Self Devolpment Counselling</string>
    <string name="family_counselling">Family Counselling</string>
    <string name="parent_counselling">Parent Counselling</string>
    <string name="chats">Chats</string>
    <string name="wallet_money">20</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="forcaster_for_price">You have selected forecaster for price.Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_provide_rating">Please Provide the Rating</string>
    <string name="notification">Notification</string>
    <string name="booking_request_confirmed">Booking Request Confirmed.</string>
    <string name="payment_successfully_completed">Payment Sucessfully Completed.</string>
    <string name="more">More</string>
    <string name="change_password">Change Password</string>
    <string name="turn_on_notification">Turn Notification</string>
    <string name="change_languauge">Change Language</string>
    <string name="share_app">Share App</string>
    <string name="about_the_app">About The App</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="select_language">Select the Language you want to continue with::</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="arabic">Arabic</string>
    <string name="urdu">Urdu</string>
    <string name="insufficient_balance">You have insufficient balance Please add money to proceed</string>
    <string name="recharge_now">Recharge now</string>
    <string name="cancel">Cancel</string>
    <string name="fees">Fees:</string>
    <string name="add_money">Add Money</string>
    <string name="apply">Apply</string>
    <string name="promo_code">Promocode</string>
    <string name="total_price">Total Price</string>
    <string name="please_select_payment_method">Please Select the Payment Method</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="admin_bank_detail">Admin Bank Details</string>
    <string name="bank_holder_account">Bank Account Holder Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="please_attach_photo">Please Attach a photo of the transfer receipts.</string>
    <string name="points">Points</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank_transfer_payment_verified">Please Wait for some time. \n Your bank transfer payment  is being verified</string>
    <string name="bank_name">Bank Name</string>
    <string name="state_bank_of_india">State Bank Of India</string>
    <string name="bank_account_holder_name">Bank Account Holder Name</string>
    <string name="your_bank_details">Your Bank Details</string>
    <string name="facebook_app_id">485885205306870</string>
    <string name="fb_login_protocol_scheme">fb485885205306870</string>
    <string name="upload_video">Upload Video</string>
    <string name="about_us">About Us</string>
    <string name="write_here">Write here...</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="family_counselling2">Family \n Counselling</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="write_here_comment">Write here comment...</string>
    <string name="enter_mobile_number">Please enter mobile number</string>
    <string name="enter_password">Please enter password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_password_not_match">Confirm passcode does not match</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_enter_six_digit">Please enter six digit otp</string>
    <string name="otp_not_match">Otp does not match</string>
    <string name="otp_send_successfully">Otp has send successfully</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_email">Please enter email</string>
    <string name="please_enter_pob">Please enter place of birth</string>
    <string name="please_enter_dob">Please enter date of birth</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_marital_status">Please select marital status</string>
    <string name="write_dream">Please write your dream</string>
    <string name="please_stop_recording">Please stop recording first</string>
    <string name="other_device_logged_in">Same user has been logged in another device</string>
    <string name="use_passcode">Use passcode</string>
    <string name="please_try_again">Please try again</string>
    <string name="invalid">Invalid !</string>
    <string name="back">BACK</string>
    <string name="delete">DELETE</string>
    <string name="touch_id">Touch-ID</string>
    <string name="create_your_passcode">Create your passcode</string>
    <string name="please_reenter_confirm_password">Please re-enter confirm passcode</string>
    <string name="fingerprint_configured">Fingerprint configured</string>
    <string name="password_not_match">Password not match</string>
    <string name="login_successfull">Login successfull</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="just_now">Just now</string>
    <string name="enter_your_msg">Enter your message...</string>
    <string name="notification_channel_id">channel-01</string>
    <string name="net_total_price">Net Total Price</string>
    <string name="select_bank">Select Bank</string>
    <string name="please_enter_account_holder_name">Please enter account holder name</string>
    <string name="please_enter_account_number">Please enter account number</string>
    <string name="please_enter_valid_account_no">Please enter valid account number</string>
    <string name="please_attach_photo_transfer_receipt">Please attach photo of transfer receipts</string>
    <string name="socket_error">Socket error</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_payment">My Payments</string>
    <string name="my_booking">My Booking</string>
    <string name="contact_with_email">Contact with email</string>
    <string name="contact_with_message">Contact with message</string>
    <string name="please_play_audio_first">Please play audio first</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="write_your_dream">Write your dream</string>
    <string name="validation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVW XYZ</string>
    <string name="tell_your_dream_in_a_voice_note">Tell your dream in a voice note</string>
    <string name="continue_s">Continue</string>
    <string name="name">Name</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="upload_photo">Upload photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="available_points">Available Points</string>
    <string name="purchase">Purchase</string>
    <string name="sar">SAR</string>
    <string name="discounted_price">Discounted Price</string>
    <string name="coming_soon">Coming soon</string>
    <string name="store">Store</string>
    <string name="parenting_counselling">Parenting \n Counselling</string>
    <string name="psychological_counselling2">Psychological \n Counselling</string>
    <string name="self_devolpment2">Self-Development Counselling</string>
    <string name="write_your_comment">Please write your comment</string>
    <string name="details">Details</string>
    <string name="cancelled">Cancelled</string>
    <string name="in_progress">In Progress</string>
    <string name="completed_request">Completed Request</string>
    <string name="spended_points">Spended Points</string>
    <string name="record_audio_first">Please record your audio first</string>
    <string name="record_upto_30sec">You can record upto 30 secounds</string>
    <string name="payment">Payment</string>
    <string name="forecaster_s_fee">Forecaster\'s Fee</string>
    <string name="forecaster_details">Forecaster Details</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="device_not_support_fingerprint">Your device doesn\'t support fingerprint authentication</string>
    <string name="please_enable_fingerprint_permissioin">Please enable the fingerprint permission</string>
    <string name="no_fingerprint_configured">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="enable_lockscreen_security">Please enable lockscreen security in your device\'s Settings</string>
</resources>