<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/pop_background">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pop_round_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.boushra.View.SegoeRegularEditText
            android:id="@+id/confirmpass_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape2"
            android:hint="@string/confirm_passsword"
            android:textSize="@dimen/text_size_regular"
            android:textAlignment="viewStart"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:drawableEnd="@mipmap/un_view"
            android:paddingStart="@dimen/dp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newpass_txt" />

        <com.boushra.View.SegoeRegularTextView
            android:id="@+id/segoeRegularTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fill_the_following"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.boushra.View.SegoeRegularEditText
            android:id="@+id/newpass_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape2"
            android:hint="@string/new_password"
            android:inputType="textPassword"

            android:textAlignment="viewStart"
            android:drawableEnd="@mipmap/un_view"
            android:paddingStart="@dimen/dp_18"

            android:textColorHint="@color/black"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oldpass_txt" />

        <com.boushra.View.SegoeRegularEditText
            android:id="@+id/oldpass_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textAlignment="viewStart"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@mipmap/un_view"
            android:paddingStart="@dimen/dp_18"
            android:background="@drawable/edittextshape2"

            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/segoeRegularTextView4" />


        <com.boushra.View.fredokaTextView
            android:id="@+id/changePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/buttongradient"
            android:gravity="center"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpass_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>