<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:background="@drawable/edittextshapeshadow"
        android:paddingStart="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:weightSum="2">


        <com.boushra.View.fredokaTextView
            android:id="@+id/countryCodePicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="+91"

            android:visibility="gone"
            android:textColor="@color/black">





        </com.boushra.View.fredokaTextView>
        <com.boushra.View.fredokaCountryCodePicker
            android:id="@+id/ccode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_60"
            android:textAlignment="center"
            android:layout_marginTop="-20dp"
            android:visibility="visible"
            app:hideNameCode="true"
            app:contentColor="@color/black"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showFlag="false"
            app:textSize="@dimen/dp_14" />



        <com.boushra.View.fredokaEditText
            android:id="@+id/mobile_number_ed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:textColorHint="#123"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:background="@android:color/transparent"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


    <com.boushra.View.fredokaEditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:background="@drawable/edittextshapeshadow"
        android:paddingStart="@dimen/dp_25"

        android:hint="@string/password"
        android:textColorHint="#123"
        android:drawableEnd="@mipmap/un_view"
        android:imeOptions="actionDone"
        android:textSize="@dimen/text_size_regular"
        android:paddingEnd="@dimen/dp_10"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout"

        tools:ignore="MissingConstraints" />

    <com.boushra.View.fredokaTextView
        android:id="@+id/forgetPasswordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forget_password"
        android:textColor="#123"
        android:textSize="@dimen/text_size_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_ed"
        tools:ignore="MissingConstraints" />

    <com.boushra.View.fredokaButton
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttongradientshadow"
        android:text="@string/log_in"
        android:textColor="#F5F6F7"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordtxt" />

    <com.boushra.View.SegoeRegularTextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/terms_conditions"
        android:textAlignment="center"
        android:textColor="#123456"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in"
        tools:ignore="MissingConstraints" />


    <com.boushra.View.fredokaTextView
        android:id="@+id/fredokaTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/or"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="#123456"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fredokaTextView3"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/googleLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/google"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/facebookll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/fb"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:ignore="MissingConstraints">

        <com.boushra.View.fredokaTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="#123"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold" />

        <com.boushra.View.fredokaTextView
            android:id="@+id/singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#123"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
