<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/pop_background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pop_round_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/closell"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/closeImg"
                android:layout_width="@dimen/dp_10"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/close" />

        </LinearLayout>


        <com.boushra.View.SegoeRegularTextView
            android:id="@+id/opt_verify_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:text="@string/otp_has_send"
            android:textAlignment="center"
            android:textColor="#123"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closell" />

        <com.boushra.View.SegoeRegularEditText
            android:id="@+id/opt_phone_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape2"
            android:textAlignment="viewStart"
            android:paddingStart="@dimen/dp_18"
            android:hint="@string/please_enter_otp"
            android:imeOptions="actionDone"
            android:textColorHint="#123"
            android:maxLength="6"
            android:inputType="number"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opt_verify_txt" />



        <com.boushra.View.SegoeRegularTextView
            android:id="@+id/resend_code_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/resend_code"
            android:textAlignment="center"
            android:textColor="#123"
            android:textSize="@dimen/text_size_medium"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opt_phone_ed" />


        <com.boushra.View.fredokaButton
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/buttongradient"
            android:text="@string/verify"
            android:textAllCaps="true"
            android:textColor="#F5F6F7"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resend_code_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>